# LanguagePractice

./: .gitignore  CMakeLists.txt  README.md
C++/: BFS.cpp  BinaryTreeCameras.cpp  ClimbingStairs.cpp  Endswith.cpp  FloorNum.cpp  GoldbachConjecture.cpp  Line.cpp  MagicTrick.cpp  MissingTerm.cpp  RGBToHex.cpp  ThreeorFive.cpp  YesOrNo.cpp  rot13.cpp  vikaAndHerFriends.cpp  xmasMarathon.cpp
C-Programming/: Jaden.c  NarcisticNumber.c
Csharp/: AddTwoNum.cs  ArraySum.cs  IsSameTree.cs  Program.cs  RemoveElement.cs
GoLang/: sexyPrimes.go
Java/: AddingBigNumbers.java  BinarySearch.java  CommonPrefix.java  ConnectingTowns.java  CountIpAddress.java  DiagonalSum.java  LongestConsecutiveSequence.java  MeanSqErr.java  MergeLists.java  Mumbling.java  Node.java  PaginationHelper.java  RangeSumBst.java  SpeedControl.java  TargetIndecies.java  TwoSum.java  WhoLikesit.java
JavaScript/: baseSeven.js  convertFracts.js  createPhoneNum.js  dp.js  findthePoint.js  firstOccurence.js  handshake.js  lengthOfLastWord.js  package-lock.json  package.json  palindromeNum.js  pigLatin.js  removeDuplicates.js  rgbtoHex.js  sexyPrime.js  sortByBits.js
Python/: ArrayDiff.py  Ip4vto32.py  PiApprox.py  addBinary.py  calcwithFunctions.py  candies.py  customersWhoNeverOrder.py  domainName.py  editDistance.py  gaussianElimination.py  grasshopper.py  handy.py  maxSubarray.py  medianArray.py  moveAllBalls.py  palindromicArray.py  parking.py  planets.py  rankings.py  rot13.py  sendingMessages.py  sexyPrime.py  summingSeries.py  uniqueInOrder.py  vaporCode.py  vectorClass.py
Ruby/: RomanEncoder.rb
(+18 files in other folders)
