cmake_minimum_required(VERSION 3.24)
project(LanguagePractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(LanguagePractice
        C++/BFS.cpp
        C++/ClimbingStairs.cpp
        C++/FloorNum.cpp
        C++/GoldbachConjecture.cpp
        C++/Line.cpp
        C++/MagicTrick.cpp
        C++/xmasMarathon.cpp
        C++/YesOrNo.cpp
        C-Programming/Jaden.c)
